mostly working code
